--- a/sample/sample.tex
+++ b/sample/sample.tex
@@ -1,7 +1,7 @@
 % +++
 % latex = "uplatex"  # or "platex"
 % +++
-\documentclass[autodetect-engine, dvi=dvipdfmx, fleqn]{wtarticle}
+\documentclass[autodetect-engine, dvi=dvipdfmx]{wtarticle}
 
 \setdocinfo{
   title = {サンプル文書},
@@ -41,8 +41,8 @@
 
 \section{長文から受ける印象}
 
-\jalipsum[1-2]{wagahai}
-\emph{\jalipsum[3]{wagahai}}
+\jalipsum[1-2]{wagahai}%
+\emph{\jalipsum[3]{wagahai}}%
 \jalipsum[4-5]{wagahai}
 
 \end{document}
