add a new Rake task to automatically generate all sample PDFs

--- a/sample/sample.tex
+++ b/sample/sample.tex
@@ -1,11 +1,8 @@
-% +++
-% latex = "uplatex"  # or "platex"
-% +++
 \documentclass[autodetect-engine, dvi=dvipdfmx]{wtarticle}
 
 \setdocinfo{
   title = {サンプル文書},
-  author = {wtsnjp},
+  author = {ワトソン (wtsnjp)},
 }
 
 \setdocstyle{
